css/styles.css
/* ... */
/* Media Queries for Mobile Devices */
@media only screen and (max-width: 600px) {
  h1 {
    font-size: 1.6rem;
  }

  h2 {
    font-size: 1.45rem;
  }

  .logo {
    font-size: 1.4rem;
  }

  /* welcome */
  #welcome-message {
    font-size: 2rem;
  }

  .welcome .typed-cursor {
    font-size: 2rem;
  }

  /* nav element */
  nav {
    position: absolute;
    display: none;
    flex-direction: column;
    top: 65px;
    right: 25px;
    padding: 0px;
    text-align: start;
    border: 2px solid var(--color-primary);
    background-color: var(--color-dark);
    box-shadow: 2px 2px 6px 2px rgb(0, 0, 0, 0.5);
    animation: mobile-nav 0.3s ease-in-out;
  }
  nav.open {
    display: flex;
  }

  .burger-container {
    display: block;
  }

  .nav ul {
    display: flex;
    flex-direction: column;
  }

  nav ul li {
    padding: 0;
    margin: 0;
  }

  .nav a {
    margin: 0;
    width: 100%;
    display: block;
    padding: 10px 80px 10px 20px;
    cursor: pointer;
    color: white;
    background-color: var(--color-secondary);
    user-select: none;
  }

  .nav a:hover {
    background-color: var(--color-secondary-hover);
  }

  section {
    padding: 5px;
    padding-bottom: 20px;
  }

  .nav-theme-toggle {
    margin-top: 5px;
    margin-left: 10px;
    margin-bottom: 10px;
  }

  /* about */
  .about-div {
    grid-template-columns: 1fr;
  }

  .about-image-div {
    display: none;
  }

  .middle-container {
    padding-top: 70px;
  }

  /* project */
  .projects-container {
    display: flex;
    flex-direction: column;
    gap: 25px;
  }

  .project-card {
    display: flex;
    flex-direction: column;
    gap: 0px;
    padding: 5px;
  }

  .project-info {
    gap: 5px;
    padding: 15px 10px;
  }

  .project-info .project-title {
    font-size: 1rem;
  }

  .project-info .project-description {
    font-size: 0.9rem;
  }

  .project-image-div {
    width: 100%;
    max-height: 170px;
  }

  .project-image {
    width: 100%;
    height: 100%;
  }

  .detail {
    display: none;
  }

  /* project display */
  .project-display {
    width: 90%;
    gap: 0px;
    overflow: visible;
  }

  .project-display-top {
    padding: 5px 15p 10px;
    box-shadow: 0px 6px 10px 1px rgba(0, 0, 0, 0.3);
  }

  .project-display .project-display-close {
    width: 35px;
    height: 35px;
    top: 7px;
    right: 10px;
  }

  .project-display-title {
    font-weight: 700;
    font-size: 1.3rem;
    line-height: 1.3rem;
    color: white;
    padding-top: 10px;
  }

  .project-display-tag {
    font-size: 0.75rem;
  }

  .project-display-meta p {
    font-size: 0.8rem;
  }

  .project-display-meta p .meta {
    display: none;
  }

  .project-display-mid {
    font-size: 0.9rem;
  }

  /* path */
  .path-div:last-child::after {
    left: -20px;
    top: 42%;
  }
}

